--- a/style.css
+++ b/style.css
@@ -12,10 +12,14 @@ body { /*Applied custom font 'Raleway'*/
 	font-family: 'raleway', Arial, Helvetica, sans-serif;
 }
 
-/*General page layout */
+/* General page layout options */
 
-#header_and_page {
-	margin-left: 25px;
+.flex_bloc {
+	display: flex;
+}
+
+header, #page {
+	margin: 30px 5% 0px 5%;
 }
 
 h1 {
@@ -23,30 +27,36 @@ h1 {
 	font-weight: bolder;
 }
 
-/*Header layout*/
+strong {
+	font-size: 1.2em;
+	font-weight: bold;
+}
 
-header {
-	display: flex;
+/*## Header layout ##*/
+
+#header_top {
+	justify-content: flex-end;
+	
 }
 
 #logo {
-/*propietes logo*/
+	position: absolute;
+	top: 30px;
+	left: 5%;
 }
 
 #subscribe {
-	position: absolute;
-	top: 5px;
-	right: 20px;
+	order: 1;
 	font-weight: bolder;
 	text-decoration: none;
 	color: #0065FC;
 }
 
-/*Top Navigation menu*/
+/* Top Navigation menu */
 nav {
-	height: max-content;
 	position: relative;
-	top: -24px;
+	top: -46px;
+	margin-right: 20px;
 }
 
 nav ul {
@@ -54,37 +64,86 @@ nav ul {
 	display: flex;
 }
 
-nav li {
-	margin-right: 20px;
-}
-
 nav a {
 	text-decoration: none;
 	color: black;
 	display: block;
-	padding-top: 24px;
+	width: 100px;
+	padding: 46px 45px 5px 45px;
+	border-top: 2px solid transparent;
 }
 
 nav a:hover {
 	color: #0065FC;
-	border-top: 2px solid #0065FC;
+	border-color: #0065FC;
 }
 
-/*Body(?) layout */
 
-/*Search box*/
-form {
-	display: flex;
+/* Search box */
+
+form label {
+	background-color: #F2F2F2;
+	padding: 5px 10px 5px 10px;
+	border: 1px solid red;
 }
 
-/*Footer layout*/
+input[type=search] {
+	color: white;
+	position: relative;
+	right: 5px;
+}
+
+input[type=submit] {
+	color: white;
+	background-color: #0065FC;
+	position: relative;
+	right: 10px;
+}
+
+
+::placeholder {
+	color: black;
+	font-weight: bold;
+	font-family: 'railway';
+	opacity: 1; /* for Firefox */
+}
+
+/* "Filtres" buttons */
+
+#filtres {
+	justify-content: flex-start;
+	flex-wrap: wrap;
+}
+
+#filtres div {
+	flex-wrap: wrap;
+}
+
+#filtres div[class="filtre_elem"] {
+	border: 2px solid red;
+}
+
+#filtres div[class="filtre_elem"]:hover {
+	border: 2px solid black;
+}
+
+/*## Page layout ##*/
+
+/*Content*/
+
+aside {
+	flex: 0 1 auto;
+	order: 1;
+}
+
+/*## Footer layout ##*/
 
 footer {
 	background-color:#F2F2F2;
 	display: flex;
 	justify-content: flex-start;
 	flex-wrap: wrap;
-	padding: 24px;
+	padding: 5%;
 }
 
 .foot-list {
@@ -109,12 +168,12 @@ footer {
 
 
 
-/* Moblie  rules
+/*## Moblie  rules ##
 ##work in progress
 */
 @media (max-width: 1024px) {
-  
+	
 	footer {
 		flex-direction: column;
 	}
-  }
+}
