--- a/style.css
+++ b/style.css
@@ -33,13 +33,6 @@ h2 {
 	font-weight: bold;
 }
 
-/*TEMPORAIRE!!*/
-img {
-	max-width: 200px;
-	max-height: 200px;
-}
-/*TEMPORAIRE!!*/
-
 /*icon mods*/
 
 .filtre-i {
@@ -154,7 +147,6 @@ input[type=submit] {
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	margin-top: 20px;
-	align-items: center;
 }
 
 #filtres :nth-child(1) {
@@ -166,24 +158,30 @@ input[type=submit] {
 }
 
 #filtres div.filtre-cell {
-	margin: 10px 20px 10px 0px;
+	text-align: center;
+	margin: 0px 15px 15px 0px;
+	padding-right: 12px;
 	border-radius: 50px;
-	padding: 2px 12px 2px 0px;
 	border: 2px solid lightgray;
 }
 
 #filtres div.filtre-cell:hover {
 	background-color: #0065FC;
 	color: white;
-	border: 2px solid black;
+	border: 2px solid #0065FC;
+}
+
+.filtre-cell * {
+	display: inline-block;
 }
 
 .filtre-cell i {
 	margin-right: 10px;
 	color: #0065FC;
-	font-size: 0.8em;
+	font-size: 1em;
 	border-radius: 50%;
-	padding: 5px 9px 5px 9px;
+	box-shadow: 0 0 0 3px #DEEBFF;
+	padding: 16px 15px 17px 15px;
 	background-color: #DEEBFF;
 }
 
@@ -291,11 +289,26 @@ i[class="fas fa-chart-line"] {
 }
 
 .cell-3 {
-	margin: 20px;
-	padding: 25px;
+	margin: 5px;
+	padding: 0;
 	border: 1px solid blue;
 }
 
+/* colonnes pour section
+.column {
+	display: flex;
+	flex-direction: column;
+	flex: 25%;
+	max-width: 25%;
+}*/
+
+/*images*/
+/*TEMPORAIRE!!*/
+img {
+	max-width: 100%;
+	max-height: 200px;
+}
+/*TEMPORAIRE!!*/
 
 /*######### Footer layout #########*/
 
@@ -333,8 +346,14 @@ footer {
 ##work in progress##
 */
 @media (max-width: 1024px) {
-	
 	footer {
 		flex-direction: column;
 	}
 }
+
+@media (max-width: 600px) {
+	.column {
+	  flex: 100%;
+	  max-width: 100%;
+	}
+  }
