--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ section * {
 
 #block_page_1 {
 	flex-wrap: wrap-reverse;
+	justify-content: space-between;
 }
 
 .cell-1, .cell-2, .cell-3 {
@@ -317,7 +318,6 @@ i[class="fas fa-chart-line"] {
 }
 
 .image-crop2 img {
-	display: block;
 	max-width: 100%;
 	height: auto;
 }
@@ -349,7 +349,6 @@ i[class="fas fa-chart-line"] {
 .cell-3 {
 	margin: 5px;
 	padding: 0;
-	overflow: hidden;
 	border: 1px solid blue;
 }
 
@@ -359,9 +358,18 @@ i[class="fas fa-chart-line"] {
 	height: 600px;
 }
 
-.column img {
-	max-height: 100%;
-	width: auto;
+.image-crop3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 25px;
+	overflow: hidden;
+}
+
+/*attention ! valeur modif,  EN CONSTRUCT*/
+.image-crop3 img {
+	max-width: 100%;
+	height: auto;
 }
 
 /*######### Footer layout #########*/
@@ -413,12 +421,6 @@ footer {
 	
 }
 
-@media (min-width: 1024px) {
-	/*desktop*/
-	#plus_populaires {
-		margin-left: 2%;
-	}
-}
 
 /* A rajoutter:
 
